Git Deployment Assignment/force-app/main/default/objects/Work_location__c/Work_location__c.object-meta.xml
<CustomObject>
    <label>Work location</label>
    <nameField>
        <label>Work location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work_locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>