Git Deployment Assignment/force-app/main/default/objects/Work_location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field indicates the 
street</description>
    <label>Street</label>
    <length>20</length>
    <type>Text</type>
</CustomField>